# assemblylift

./: .gitmodules  Cargo.toml
.github/workflows/: main.yml
builtin/functions/verify-macaroon/src/: main.rs
cli/: Cargo.toml
cli/src/: archive.rs  main.rs
cli/src/bom/: service.rs
cli/src/commands/: cast.rs  mod.rs  term.rs
cli/src/commands/cast/: ruby.rs  rust.rs
cli/src/commands/term/: app.rs  mod.rs
cli/src/providers/: aws_lambda.rs
cli/src/terraform/: function.rs  mod.rs
core/: Cargo.toml
core/entity/: Cargo.toml  README.md
core/entity/eval/: Cargo.toml
core/entity/eval/src/: main.rs
core/entity/examples/: user.rego  user.toml
core/entity/forge/: Cargo.toml
core/entity/forge/src/: main.rs
core/entity/src/: lib.rs  main.rs  package.rs
core/entity/wasm/: Cargo.toml
core/entity/wasm/src/: lib.rs
core/io/guest/: Cargo.toml
core/io/guest/src/: lib.rs
core/iomod/guest/src/: lib.rs
core/src/: abi.rs  buffers.rs  lib.rs  threader.rs  wasm.rs
core/wasmer/: Cargo.toml
core/wasmer/src/: abi.rs  lib.rs
core/wasmtime/: Cargo.toml
docker/: asml-hyper-debian  asml-lambda-default
examples/aws-auth/: assemblylift.toml
examples/aws-auth/services/my-service/: service.toml
examples/hello-k8s/: assemblylift.toml
examples/hello-k8s/services/hello/: service.toml
examples/hello-k8s/services/hello/ruby/: handler.rb
runtimes/aws-lambda/host/: Cargo.toml
runtimes/aws-lambda/host/src/: abi.rs  main.rs
