[workspace]
members = [
    "runtimes/aws-lambda/host",
    "runtimes/aws-lambda/guest",
    "runtimes/hyper",
#    "runtimes/kubelet",
#    "runtimes/openfaas",
    "core",
    "core/guest",
    "core/guest/macros",
    "core/entity",
    "core/entity/eval",
    "core/entity/forge",
    "core/iomod",
    "core/iomod/guest",
    "core/io",
    "core/io/guest",
    "core/io/common",
    "cli"
]
exclude = ["examples"]
