[workspace]
resolver = "2"
members = [
    "crates/runtimes/aws-lambda/host",
    "crates/runtimes/aws-lambda/guest",
    "crates/runtimes/hyper",
    "crates/runtimes/components/wasi-secrets/in-memory",
#    "builtin/functions/verify-macaroon",
    "crates/generator",
    "crates/tools",
    "crates/core",
    "crates/core/guest",
    "crates/core/guest/macros",
    "crates/core/iomod",
    "crates/core/iomod/guest",
    "crates/core/io/guest",
    "crates/core/io/common",
    "crates/cli"
]
exclude = ["examples"]
