[package]
name = "assemblylift-core-wasmer"
version = "0.1.0"
edition = "2021"

[dependencies]
assemblylift-core = { version = "0.4.0-alpha.10", path = "../../core" }
assemblylift-core-iomod = { version = "0.4.0-alpha.0", path = "../../core/iomod" }
anyhow = "1.0"
crossbeam-channel = "0.5"
wasmer = "2.1"
wasmer-wasi = "2.1"
