[package]
name = "assemblylift-core-entity-eval"
version = "0.0.0"
description = "AssemblyLift Core Entity token-policy evaluator"
edition = "2021"
license-file = "../../LICENSE.md"
repository = "https://github.com/akkoro/assemblylift"
readme = "README.md"

[dependencies]
#macaroon = { git = "https://github.com/deislabs/libmacaroon-rs", rev = "32e8aed" }
#macaroon = { git = "https://github.com/akkoro/macaroon", branch = "ring-crypto" }
macaroon = { version = "0.3.0-alpha", path = "../../../../../Forks/macaroon" }
opa = { version = "0.7.0", features = ["bundle", "wasmtime-cranelift"] }
serde = { version = "1.0", features = ["derive"] }
