[package]
name = "assemblylift-core-entity-eval"
version = "0.0.0"
description = "AssemblyLift Core Entity token-policy evaluator"
edition = "2021"
license-file = "../../LICENSE.md"
repository = "https://github.com/akkoro/assemblylift"
readme = "README.md"

[dependencies]
macaroon = { version = "0.4.0-dev", path = "../../../../../Forks/macaroon" }
opa = { version = "0.9.0", features = ["bundle", "wasmtime-cranelift"] }
serde = { version = "1.0", features = ["derive"] }
