[package]
name = "assemblylift-core-entity-wasm"
version = "0.0.0"
description = "AssemblyLift core entity WASM module"
edition = "2018"
license-file = "../../LICENSE.md"
repository = "https://github.com/akkoro/assemblylift"
readme = "README.md"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
macaroon = { git = "https://github.com/deislabs/libmacaroon-rs", rev = "32e8aed" }
serde = { version = "1.0", features = ["derive"] }
